// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Insets snapshots should render Insets 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Padding
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="padding-lr"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="padding-lr"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="padding-lr"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="padding-lr"
                height="12"
                name="PaddingLR"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="padding-lr"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="padding-lr"
                    height="12"
                    name="PaddingLR"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed padding left/right (0)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Horizontal padding
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="padding-tb"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="padding-tb"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="padding-tb"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="padding-tb"
                height="12"
                name="PaddingTB"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="padding-tb"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="padding-tb"
                    height="12"
                    name="PaddingTB"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed padding top/bottom (0)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Vertical padding
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon"
            data-test-button-icon="insets-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="individual-insets"
              height="12"
              name="IndividualInsets"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Individual padding
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Insets snapshots should render back to merged mode 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Padding
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="padding-lr"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="padding-lr"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="padding-lr"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="padding-lr"
                height="12"
                name="PaddingLR"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="padding-lr"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="padding-lr"
                    height="12"
                    name="PaddingLR"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed padding left/right (0)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Horizontal padding
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="padding-tb"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="padding-tb"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="padding-tb"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="padding-tb"
                height="12"
                name="PaddingTB"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="padding-tb"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="padding-tb"
                    height="12"
                    name="PaddingTB"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed padding top/bottom (0)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Vertical padding
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon"
            data-test-button-icon="insets-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="individual-insets"
              height="12"
              name="IndividualInsets"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Individual padding
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Insets snapshots should render when mose is individual 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Padding
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="padding-l"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="padding-l"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="padding-l"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="padding-l"
                height="12"
                name="PaddingL"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="padding-l"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="padding-l"
                    height="12"
                    name="PaddingL"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed padding left (0)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Left padding
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="padding-t"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="padding-t"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="padding-t"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="padding-t"
                height="12"
                name="PaddingT"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="padding-t"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="padding-t"
                    height="12"
                    name="PaddingT"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed padding top (0)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Top padding
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="padding-r"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="padding-r"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="padding-r"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="padding-r"
                height="12"
                name="PaddingR"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="padding-r"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="padding-r"
                    height="12"
                    name="PaddingR"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed padding right (0)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Right padding
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="padding-b"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="padding-b"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="padding-b"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="padding-b"
                height="12"
                name="PaddingB"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="padding-b"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="padding-b"
                    height="12"
                    name="PaddingB"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed padding bottom (0)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Bottom padding
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--selected"
            data-test-button-icon="insets-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="individual-insets"
              height="12"
              name="IndividualInsets"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Individual padding
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
